// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name recognized address should return name 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#f2f4f6",
      "borderRadius": 99,
      "flexDirection": "row",
      "gap": 5,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingVertical": 4,
    }
  }
>
  Identicon
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#141618",
        "flexShrink": 1,
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Known name
  </Text>
</View>
`;

exports[`Name unknown address displays checksummed address 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#f2f4f6",
      "borderRadius": 99,
      "flexDirection": "row",
      "gap": 5,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingVertical": 4,
    }
  }
>
  <SvgMock
    color="#141618"
    height={20}
    name="Question"
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
    width={20}
  />
  <Text
    accessibilityRole="text"
    ellipsizeMode="middle"
    numberOfLines={1}
    style={
      {
        "color": "#141618",
        "flexShrink": 1,
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    0x29900...A5B4e
  </Text>
</View>
`;
